# sink

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: directory.rs  hash_tree.rs  lib.rs  main.rs  messages.rs  objects.rs  project.rs  watcher.rs
filebrowser/: Cargo.toml
filebrowser/src/: app.rs  browser.rs  lib.rs  logging.rs  main.rs  tui.rs  ui.rs
server/: Cargo.toml
server/src/: main.rs
simulation-tests/: Cargo.toml
