[package]
name = "cli"
version = "0.1.0"
authors = ["lukecollier <me@lukecollier.dev>"]
edition = "2024"

[dependencies]
colored = "1.7"
yansi = "0.5.0"
core = { path = "../core" }
client = { path = "../client" }
tokio = { version = "1.49.0", default-features = false, features = ["rt"] }
anyhow = "1.0.100"
seahash = { version = "4.1.0", features = ["use_std"] }
clap = { version = "4.5.54", features = ["derive"] }

