[package]
name = "client"
version = "0.1.0"
authors = ["lukecollier <me@lukecollier.dev>"]
edition = "2024"

[dependencies]
notify = "8.2.0"
ws = "0.9.2"
twox-hash = "1.1.2"
anyhow = "1.0.100"
daemonize = "0.5.0"
core = { path = "../core" }
tokio = { version = "1.49.0", features = ["macros", "rt", "signal"] }
futures = "0.3.31"
