[package]
name = "client"
version = "0.1.0"
authors = ["lukecollier <me@lukecollier.dev>"]
edition = "2024"

[dependencies]
notify = "8.2.0"
anyhow = "1.0.100"
daemonize = "0.5.0"
core = { path = "../core" }
tokio = { version = "1.49.0", features = ["macros", "rt", "signal"] }
futures = "0.3.31"
seahash = { version = "4.1.0", features = ["use_std"] }
fastwebsockets = "0.10.0"
