[package]
name = "core"
version = "0.1.0"
authors = ["lukecollier <me@lukecollier.dev>"]
edition = "2024"

[dependencies]
notify = "4.0.16"
tokio = { version = "1.49.0", default-features = false, features = ["bytes", "fs", "io-std", "io-util", "net", "time", "sync"] }
anyhow = "1.0.100"
bytes = "1.11.0"
interprocess = { version = "2.2.3", features = ["async"] }
serde = { version = "1.0.228", features = ["derive"] }
turso = "0.4.3"
serde_json = "1.0.149"
futures = "0.3.31"
