[package]
name = "core"
version = "0.1.0"
authors = ["lukecollier <me@lukecollier.dev>"]
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", default-features = false, features = ["bytes", "fs", "io-std", "io-util", "net", "time", "sync"] }
anyhow = "1.0.100"
bytes = "1.11.0"
interprocess = { version = "2.2.3", features = ["async"] }
serde = { version = "1.0.228", features = ["derive"] }
turso = "0.4.3"
serde_json = "1.0.149"
futures = "0.3.31"
nix = { version = "0.30.1", features = ["signal"] }
ignore = { version = "0.4.25", features = ["simd-accel"] }
gix = "0.77.0"
similar = { version = "2.7.0", features = ["bytes", "bstr"] }
seahash = { version = "4.1.0", features = ["use_std"] }
vfs = { version = "0.12.2", features = ["async-vfs", "tokio"] }
async-trait = "0.1.89"
notify = { version = "8.2.0", features = ["mio"] }
